# OpenFlow

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Info.plist  LICENSE  README.md  build.rs  dist-workspace.toml
.github/workflows/: release.yml
assets/: ICON.md
docs/: architecture.md  macos-setup.md
scripts/: package.sh
src/: app.rs  config.rs  domain.rs  launchd.rs  main.rs  pipeline.rs  tray.rs
src/platform/: macos.rs
src/services/: audio.rs  focus.rs  mod.rs  paste.rs  refinement.rs  sound.rs  transcription.rs  vocab.rs
